src/test/deca/context/invalid/created/while-mauvais.deca
//Mauvaise condition dans le while
{
	while(3){
	}
}